# AerisPlane

./: 404.html  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
api/aero/: index.html
api/catalog/: index.html
api/control/: index.html
api/core/: index.html
api/mdo/: index.html
api/mission/: index.html
api/propulsion/: index.html
api/stability/: index.html
api/structures/: index.html
api/weights/: index.html
architecture/design/: index.html
architecture/overview/: index.html
changelog/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  contributing.md  getting-started.md  index.md  installation.md  overview.md  weights-module-plan.md
docs/api/: aero.md  api-aero.md  api-mission.md  api-stability.md  api-weights.md  catalog.md  control.md  core.md  mdo.md  mission.md  propulsion.md  stability.md  structures.md  weights.md
docs/architecture/: design.md  overview.md
docs/plans/: aero-solver-roadmap.md  control-module-plan.md  stability-module-plan.md  uav-flight-envelope-methods.md  vendor-asb-aero.md
docs/tutorials/: 01_getting_started.ipynb  03_control_surfaces.ipynb  05_flight_performance.ipynb  06_full_discipline_chain.ipynb  07_mdo_optimization.ipynb  08_propulsion_and_endurance.ipynb  09_glider_wing_optimisation.ipynb
getting-started/: index.html
installation/: index.html
planes/CoreFly/: requirements.md
search/: search_index.json
src/aerisplane/: __init__.py
tests/: conftest.py
tests/test_aero/: test_control_surfaces.py  test_interference.py  test_native_solvers.py
tests/test_catalog/: test_hardware.py
tests/test_control/: conftest.py  test_authority.py  test_control.py
tests/test_core/: conftest.py  test_aircraft.py  test_airfoil.py  test_atmosphere.py  test_flight_condition.py  test_fuselage.py  test_placement.py  test_propulsion.py  test_structures.py  test_wing.py
tests/test_integration/: test_discipline_chain.py
tests/test_io/: conftest.py  test_aerisplane.py  test_avl.py  test_openvsp.py
tests/test_mdo/: test_drivers.py  test_integration.py  test_multicondition.py  test_opti.py  test_paths.py  test_problem.py  test_pymoo_driver.py  test_registry.py  test_result.py
tests/test_mission/: conftest.py  test_envelope.py  test_mission.py  test_performance.py  test_segments.py
tests/test_propulsion/: test_propulsion.py
tests/test_stability/: conftest.py  test_derivatives.py  test_stability.py
tests/test_structures/: conftest.py  test_beam.py  test_checks.py  test_loads.py  test_section.py  test_structures.py
tests/test_viz/: test_mesh.py
tests/test_weights/: conftest.py  test_buildup.py  test_cg_analysis.py
tutorials/: 01_getting_started.ipynb  01_glider_stability_analysis.ipynb  02_aerodynamics_executed.ipynb  02_weight_buildup.ipynb  03_control_surfaces.ipynb  04_flow_visualisation.ipynb  05_flight_performance.ipynb  06_full_discipline_chain.ipynb
tutorials/01_getting_started/: index.html
tutorials/02_aerodynamics_executed/: 02_aerodynamics_executed.ipynb  index.html
tutorials/02_weight_buildup/: index.html
(+102 files in other folders)
