[project]
name = "aerisplane"
version = "0.1.0"
description = "Conceptual MDO toolkit for RC/UAV aircraft design"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "neuralfoil>=0.2",
]

[project.optional-dependencies]
oas = ["openaerostruct>=2.7", "openmdao>=3.30"]
optimize = ["pygmo>=2.19"]
interactive = ["plotly>=5.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
all = ["aerisplane[oas,optimize,interactive,dev,docs]"]

[project.urls]
Homepage = "https://github.com/KasparStepan/AerisPlane"
Documentation = "https://kasparstepan.github.io/AerisPlane"
Repository = "https://github.com/KasparStepan/AerisPlane"
"Bug Tracker" = "https://github.com/KasparStepan/AerisPlane/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
