[project]
name = "aerisplane"
version = "0.1.0"
description = "Conceptual MDO toolkit for RC/UAV aircraft design"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.60",
]

[project.optional-dependencies]
aero = ["aerosandbox>=4.0", "neuralfoil>=0.2"]
oas = ["openaerostruct>=2.7", "openmdao>=3.30"]
optimize = ["pymoo>=0.6"]
viz = ["plotly>=5.0", "pyvista>=0.43"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
all = ["aerisplane[aero,oas,optimize,viz,dev,docs]"]

[project.urls]
Homepage = "https://github.com/KasparStepan/AerisPlane"
Documentation = "https://kasparstepan.github.io/AerisPlane"
Repository = "https://github.com/KasparStepan/AerisPlane"
"Bug Tracker" = "https://github.com/KasparStepan/AerisPlane/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
